[]
    Features:
	- Support for postgresql backend added
		Compatible with both ShadowNinja's and johnnyjoy's implementation
    Enhancements:
        - Updated the included colors file with colors for the new tiles that
	 	were recently added to the default minetest game.
	- Improved the scripts and documentation for generating a colors.txt
		file.
	- HTML versions of documentation in doc/ is now generated, and included
		in the different packages.
	- Documented concurrent minetest & minetestmapper use.
	- Documented the different geometries reported with --verbose
	- The option --prescan-world was added to force or disable scanning the
		entire world (i.e. reading a full blocklist)
		(useful for postgresql, which doesn't do this by default).
	- Command-line options are now all case-agnostic wrt their parameters.
	- Allow nodes to be defined as air-type or ignore-type in colors.txt
	- Added an option to draw 'ignore'-nodes.
	- Text drawn on the map is now converted to the ISO8859-2 encoding. Due
		to limited font support in the drawing library, characters not
		in the ISO8859-2 set are not supported.
		Minetestmapper will attempt to render unsupported characters
		sensibly if it can.
    Bugfixes:
        - Fixed possible compilation failure caused by stdint.h
	- Fixed compilation failure when some database libraries are not installed.
		Even when support for some of the databases was not enabled,
		the libraries for those databases still needed to be installed on
		the system for compilation to succeed. Now the libraries no
		longer need to be installed if not used.
	- Fixed backend selection, so that there should no longer be a difference
		between an automatically selected backend, and the same backend
		specified manually.
		(At least one backend-specific (LevelDB-related) option was not
		 taking effect when LevelDB was auto-selected).
[10 mar 2015]
    Enhancements:
	- Added an optimisation option: --disable-blocklist-prefetch.